# summa-solvency

backend/: Cargo.toml
contracts/test/: Verifiers.ts
csv/: entry_16_overflow.csv  entry_16_overflow_case_1.csv  entry_16_overflow_case_2.csv  entry_16_overflow_case_3.csv  entry_4.csv
prover/: Cargo.toml
prover/src/chips/range/: range_check.rs
prover/src/circuits/: tests.rs  univariate_grand_sum.rs
zk_prover/examples/: commitment_solidity_calldata.json  gen_commitment.rs
zk_prover/src/merkle_sum_tree/: mst.rs  node.rs  tests.rs  tree.rs
zk_prover/src/merkle_sum_tree/utils/: build_tree.rs
