[package]
name = "summa-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
summa-solvency = { path = "../prover" }
halo2_proofs = { path = "../../halo2-fork/halo2_proofs" }
csv = "1.2.2"
futures = "0.3.28"
num-bigint = "0.4.3"
serde = { version = "1.0.166", features = ["derive"] }
halo2_solidity_verifier = { path = "../../halo2-solidity-verifier", version = "0.1.0", features = [
    "evm",
] }
ethers = { version = "2.0.7", default-features = false, features = [
    "ethers-solc",
    "legacy",
] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.64"
tokio = { version = "1.7.1", features = ["full"] }
base64 = "0.13"
bincode = "1.3.3"
num-traits = "0.2.14"
rand = "0.8.5"

[build-dependencies]
ethers = { version = "2.0.7", default-features = false, features = [
    "ethers-solc",
    "legacy",
] }
